@@ -1,3 +1,10 @@
+2008-11-10 Braden McDaniel  <braden@endoframe.com>
+
+	Updated to 20081110 release of Autoconf GL Macros.  This addresses
+	some quoting issues in the AX_CHECK_GL macro.
+
+	* m4/ax_check_gl.m4
+
 2008-11-09 Braden McDaniel  <braden@endoframe.com>
 
 	Updated to 20081109 release of Autoconf GL Macros.  This addresses
